--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="weight.js"></script>
+    <script type="text/javascript" src="lbm.js"></script>
   </head>
   <body>
   <section class="section">
@@ -14,6 +16,8 @@
       <h1 class="title">My Body Stats</h1>
       <p class="subtitle">It's my body and I'll cry if I want to.</p>
     </div>
+  </section>
+  <section>
     <div class="section" id="weight">
     	<div class="container">
     		<h5 class="title is-5">Weight</h5>
@@ -21,59 +25,17 @@
     	</div>
     </div>
   </section>
+  <section>
+    <div class="section" id="lbm">
+    	<div class="container">
+    		<h5 class="title is-5">Lean Body Mass</h5>
+    		<svg width="960" height="500"></svg>
+    	</div>
+    </div>
+  </section>
   </body>
   <script type="text/javascript">
-  	var svg = d3.select("#weight .container svg"),
-  	    margin = {top: 20, right: 20, bottom: 30, left: 50},
-  	    width = +svg.attr("width") - margin.left - margin.right,
-  	    height = +svg.attr("height") - margin.top - margin.bottom,
-  	    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-  	var parseTime = d3.timeParse("%Y-%m-%d");
-
-  	var x = d3.scaleTime()
-  	    .rangeRound([0, width]);
-
-  	var y = d3.scaleLinear()
-  	    .rangeRound([height, 0]);
-
-  	var line = d3.line()
-  	    .x(function(d) { return x(d.date); })
-  	    .y(function(d) { return y(d.weight); });
-
-  	d3.csv("weight.csv", function(data) {
-		// if (error) throw error;
-		console.log(data);
-		data.forEach(function(data) {
-			data.date = parseTime(data.date);
-			data.weight = +data.weight;
-		});
-		console.log(data);
-	  x.domain(d3.extent(data, function(d) { return d.date; }));
-	  y.domain(d3.extent(data, function(d) { return d.weight; }));
-
-	  g.append("g")
-	      .attr("transform", "translate(0," + height + ")")
-	      .call(d3.axisBottom(x));
-
-	  g.append("g")
-	      .call(d3.axisLeft(y))
-	    .append("text")
-	      .attr("fill", "#000")
-	      .attr("transform", "rotate(-90)")
-	      .attr("y", 6)
-	      .attr("dy", "0.71em")
-	      .attr("text-anchor", "end")
-	      .text("Weight (lbs)");
-
-	  g.append("path")
-	      .datum(data)
-	      .attr("fill", "none")
-	      .attr("stroke", "steelblue")
-	      .attr("stroke-linejoin", "round")
-	      .attr("stroke-linecap", "round")
-	      .attr("stroke-width", 1.5)
-	      .attr("d", line);
-	});
+	  weight();
+	  lbm();
   </script>
 </html>
