--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="section" id="weight">
     	<div class="container">
     		<h5 class="title is-5">Weight</h5>
+    		<p>Difference between first month and last month: <span id="weightChange">x</span></p>
     		<svg width="960" height="500"></svg>
     	</div>
     </div>
@@ -29,6 +30,7 @@
     <div class="section" id="lbm">
     	<div class="container">
     		<h5 class="title is-5">Lean Body Mass</h5>
+    		<p>Difference between first month and last month: <span id="lbmChange">x</span></p>
     		<svg width="960" height="500"></svg>
     	</div>
     </div>
