--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="weight.js"></script>
     <script type="text/javascript" src="lbm.js"></script>
+    <script type="text/javascript" src="squat.js"></script>
   </head>
   <body>
   <section class="section">
@@ -35,9 +36,19 @@
     	</div>
     </div>
   </section>
+  <section>
+    <div class="section" id="squat">
+    	<div class="container">
+    		<h5 class="title is-5">Squat e1RM</h5>
+    		<p>Difference between first month and last month: <span id="squatChange">x</span></p>
+    		<svg width="960" height="500"></svg>
+    	</div>
+    </div>
+  </section>
   </body>
   <script type="text/javascript">
 	  weight();
 	  lbm();
+	  squat();
   </script>
 </html>
