adding body measurements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="weight.js"></script>
     <script type="text/javascript" src="lbm.js"></script>
     <script type="text/javascript" src="squat.js"></script>
+    <script type="text/javascript" src="measurements.js"></script>
     <style type="text/css">
     	.hidden{
     		display: none;
@@ -56,10 +57,19 @@
     	</div>
     </div>
   </section>
+  <section>
+    <div class="section" id="measurements">
+    	<div class="container">
+    		<h5 class="title is-5">Body Measurements</h5>
+    		<svg width="960" height="500"></svg>
+    	</div>
+    </div>
+  </section>
   </body>
   <script type="text/javascript">
 	  weight();
 	  lbm();
 	  squat();
+	  measurements();
   </script>
 </html>
