--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="section" id="squat">
     	<div id="tooltip" class="box"></div>
     	<div class="container">
-    		<h5 class="title is-5">Squat e1RM</h5>
+    		<h5 class="title is-5">Squat e1RM Sum</h5>
     		<p>Difference between first month and last month: <span id="squatChange">x</span></p>
     		<svg width="960" height="500"></svg>
     	</div>
