jesus fucking god

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       .sumBar{
         fill: coral;
       }
+      .setBar{
+        stroke: black;
+        fill: grey;
+      }
     </style>
   </head>
   <body>
